--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
+        with:
+          submodules: 'true'
 
       - name: Setup Emscripten toolchain
         uses: mymindstorm/setup-emsdk@v12
